// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DisplayCollectionImage /> > renders correctly and matches snapshot without image 1`] = `
<div
  className="overflow-hidden test-class undefined"
  data-testid="display-collection-image"
  id="pillarx-feed-display-collection-avatar"
  onClick={[Function]}
>
  <svg
    className="rounded-md"
    data-testid="random-avatar"
    fill="none"
    role="img"
    viewBox="0 0 36 36"
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      height={36}
      id=":r0:"
      maskUnits="userSpaceOnUse"
      width={36}
      x={0}
      y={0}
    >
      <rect
        fill="#FFFFFF"
        height={36}
        width={36}
      />
    </mask>
    <g
      mask="url(#:r0:)"
    >
      <rect
        fill="#92A1C6"
        height={36}
        width={36}
      />
      <rect
        fill="#F0AB3D"
        height={36}
        rx={36}
        transform="translate(-3 7) rotate(307 18 18) scale(1.1)"
        width={36}
        x="0"
        y="0"
      />
      <g
        transform="translate(-3 3.5) rotate(-7 18 18)"
      >
        <path
          d="M13,20 a1,0.75 0 0,0 10,0"
          fill="#000000"
        />
        <rect
          fill="#000000"
          height={2}
          rx={1}
          stroke="none"
          width={1.5}
          x={12}
          y={14}
        />
        <rect
          fill="#000000"
          height={2}
          rx={1}
          stroke="none"
          width={1.5}
          x={22}
          y={14}
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`<DisplayCollectionImage /> renders correctly and matches snapshot without image 1`] = `
<div
  className="overflow-hidden test-class undefined"
  data-testid="display-collection-image"
  id="pillarx-feed-display-collection-avatar"
  onClick={[Function]}
>
  <svg
    className="rounded-md"
    data-testid="random-avatar"
    fill="none"
    role="img"
    viewBox="0 0 80 80"
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      height={80}
      id=":r0:"
      maskUnits="userSpaceOnUse"
      width={80}
      x={0}
      y={0}
    >
      <rect
        fill="#FFFFFF"
        height={80}
        width={80}
      />
    </mask>
    <g
      mask="url(#:r0:)"
    >
      <path
        d="M0 0h80v40H0z"
        fill="url(#gradient_paint0_linear_image-name)"
      />
      <path
        d="M0 40h80v40H0z"
        fill="url(#gradient_paint1_linear_image-name)"
      />
    </g>
    <defs>
      <linearGradient
        gradientUnits="userSpaceOnUse"
        id="gradient_paint0_linear_image-name"
        x1={40}
        x2={40}
        y1={0}
        y2={40}
      >
        <stop
          stopColor="#F0AB3D"
        />
        <stop
          offset={1}
          stopColor="#C271B4"
        />
      </linearGradient>
      <linearGradient
        gradientUnits="userSpaceOnUse"
        id="gradient_paint1_linear_image-name"
        x1={40}
        x2={40}
        y1={40}
        y2={80}
      >
        <stop
          stopColor="#C20D90"
        />
        <stop
          offset={1}
          stopColor="#92A1C6"
        />
      </linearGradient>
    </defs>
  </svg>
</div>
`;
